# Tethys-Platform

./: README.md  install.yml  pyproject.toml
tethysapp/hello_world/: app.py  controllers.py  init_db.py  minio_utils.py  models.py
tethysapp/hello_world/management/commands/: init_groups.py
tethysapp/hello_world/public/css/: main.css
tethysapp/hello_world/public/js/: main.js
tethysapp/hello_world/templates/hello_world/: base.html  home.html  minio_admin.html  model_list.html
tethysapp/hello_world/tests/: tests.py
